--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,12 @@
+
 cmake_minimum_required(VERSION 3.0.0)
-project(ima VERSION 0.1.0 LANGUAGES C)
+project(ima VERSION 0.1.0)
 
-include_directories(inc)
-file(GLOB SRC_FILES src/*.c)
-add_executable(ima main.c ${SRC_FILES}) 
+add_library(libima INTERFACE)
+target_include_directories(libima INTERFACE inc)
+target_compile_features(libima INTERFACE cxx_std_11)
+target_compile_options(libima INTERFACE "-Wall" "-Wextra" "-Wpedantic")
 
-set(CMAKE_C_STANDARD 11)
-set(CMAKE_C_STANDARD_REQUIRED true)
-set(CMAKE_C_FLAGS "-Wall -Wextra -Wpedantic")
-set(CPACK_PROJECT_NAME ${PROJECT_NAME})
-set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
-include(CPack)
+add_executable(ima main.cpp)
+target_compile_features(ima PUBLIC cxx_std_11)
+target_link_libraries(ima PUBLIC libima)
